Nowe poprawki kodu backendu